package ru.gribbirg.edit.testing

object EditFeatureTestingTags {
    const val SAVE_BUTTON = "button_save"
    const val TEXT_FIELD = "text_field"
    const val DELETE_BUTTON = "button_delete"
}