package ru.gribbirg.list.testing

object ListFeatureTestingTags {
    const val ADD_BUTTON = "button_add"

    fun getItemRowId(itemId: String) = "todo_item_$itemId"
}